--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,26 @@ color: #81b3d2;
   line-height: 26px;
   text-transform: uppercase;
 }
+
+.input-popup {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+
+.input-popup-adult {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 26px;
+}
+
+.input-popup-child {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 26px;
+}
+
 .popup-search {
   text-transform: uppercase;
   color: #ffffff;
