Завершение базовой стилизации

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ color: #81b3d2;
   color: #ffffff;
   background-color: #766357;
   padding: 30px 60px;
-  font-size: bold;
+  font-weight: bold;
   display: inline-block;
 }
 
