--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,22 @@ body {
   background-color: #f2f2f2;
 }
 
+.inner-page {
+  /* Временно для сетки */
+  background-image: url("sedona-index.jpg");
+  background-size: 1200px auto;
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+
 .main-header {
   margin: 0 auto;
-  margin-bottom: 0px;
   background-color: #fffff;
+  height: 56px;
 }
 
 .main-navigation {
   position: relative;
-  /* display: flex;
-  flex-direction: column; */
-  /* align-items: center; */
 }
 
 .main-header-logo {
@@ -27,51 +32,30 @@ body {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  /* margin-top: -.25px;
-  margin-bottom: -15px; */
 }
 
 .site-navigation {
   display: flex;
-  flex-wrap: wrap;
-  /* justify-content: space-between; */
-  margin: 0;
   padding: 0;
+  margin: 0;
   list-style: none;
- /* box-sizing: border-box; */
+  justify-content: space-around;
+}
+
+.site-navigation a {
+  display: block;
+  text-decoration: none;
+  width: 239px;
+  height: 56px;
 }
 
 .navigation-link {
-  list-style: none;
   font-weight: bold;
   text-transform: uppercase;
   color: #000000;
   text-align: center;
   width: 20%;
-  box-sizing: border-box;
   padding: 15px 0;
-}
-
-.navigation-link:nth-child(4n - 2) {
-  margin-right: 20%;
-}
-
-.navigation-link:nth-child(4n - 2),
-.navigation-link:nth-child(4n - 3) {
-  text-align: left;
-  padding-left: 6%;
-  background-color: green;
-}
-
-.navigation-link:nth-child(4n - 1),
-.navigation-link:nth-child(4n) {
-  text-align: right;
-  padding-right: 6%;
-  background-color:yellow;
-}
-
-a {
-  text-decoration: none;
 }
 
 .container {
@@ -145,11 +129,12 @@ color: #81b3d2;
 }
 
 .advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1200px;
   list-style: none;
-}
-
-.features-list {
-  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .advantages-text {
@@ -157,10 +142,19 @@ color: #81b3d2;
   background-color: #81b3d2;
   line-height: 21px;
   text-align: center;
+  padding-right: 60px;
+  padding-left: 60px;
+  padding-top: 46px;
+  padding-bottom: 64px;
+  width: 400px;
 }
 
 .advantages-text h3 {
   font-weight: bold;
+}
+
+.features-list {
+  list-style: none;
 }
 
 .features-item {
@@ -179,6 +173,11 @@ color: #81b3d2;
 
 .features-item-present {
   background-image: url("../img/icon-3.svg");
+}
+
+.features-list {
+  padding: 0;
+  margin: 0;
 }
 
 .features-item h3 {
@@ -229,6 +228,7 @@ color: #81b3d2;
   padding: 30px 60px;
   font-weight: bold;
   display: inline-block;
+  margin-bottom: 55px;
 }
 
 .booking-search:hover {
@@ -249,7 +249,37 @@ color: #81b3d2;
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
+}
+
+.popup-item {
+  width: 458px;
+  margin: 0;
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+}
+
+.popup-item input {
+  box-sizing: border-box;
+  width: 346px;
+  padding-top: 9px;
+  padding-left: 8px;
+  padding-right: 15px;
+  padding-bottom: 8px;
+  background-color: #f2f2f2;
+  border: none;
+}
+.calendar {
+  background-image: url(../img/calendar.svg);
+  width: 21px;
+  height: 22px;
+}
+
+.input-popup-label {
+  margin-right: 21px;
+  width: 95px;
 }
 
 .input-popup {
@@ -259,16 +289,25 @@ color: #81b3d2;
   text-transform: uppercase;
 }
 
+.popup-item-count {
+  display: flex;
+  margin-bottom: 54px;
+}
+
 .input-popup-adult {
   font-weight: bold;
   font-size: 14px;
   line-height: 26px;
+  width: 38px;
+  height: 38px;
 }
 
 .input-popup-child {
   font-weight: bold;
   font-size: 14px;
   line-height: 26px;
+  width: 38px;
+  height: 38px;
 }
 
 .popup-search {
@@ -311,28 +350,44 @@ color: #81b3d2;
   text-transform: uppercase;
 }
 
-.footer-social {
-  width: 160px;
-  border: 1px solid red;
+.footer-social ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 140px;
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
 }
 
 .copyright {
+  display: flex;
+  align-items: center;
   text-transform: uppercase;
   font-size: 14px;
   line-height: 26px;
   color: #000000;
 }
 
-.social-button-twitter {
-  background-image: url("../img/fb-icon.svg");
+.copyright-link {
+  margin-right: 8px;
 }
 
-.social-button-facebook {
-  background-image: url("../img/fb-icon.svg");
+.social-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 46px;
+  height: 48px;
+  background-color: #81b3d2;
 }
 
-.social-button-youtube {
-  background-image: url("../img/youtube.svg");
+.social-button:hover {
+  background-color: #669ec0;
+}
+
+.social-button:active path {
+  opacity: 0.3;
 }
 
 .logo-htmlacademy:hover {
@@ -341,15 +396,6 @@ color: #81b3d2;
 
 .logo-htmlacademy:active {
   fill: #bdbbbc;
-}
-
-.social-button-twitter a:hover {
-  background-color: #669ec0;
-}
-
-.social-button-twitter a:active {
-  opacity: 0.3;
-  background-color: #5496bd;
 }
 
 .filter {
