--- a/css/styles.css
+++ b/css/styles.css
@@ -59,12 +59,12 @@ body {
 
 .navigation-item:nth-child(n+3) {
   text-align: right;
+  margin-right: -40px;
 }
 
 .site-navigation a {
   display: block;
   text-decoration: none;
-  width: 239px;
 }
 
 .navigation-link {
@@ -120,6 +120,8 @@ color: #81b3d2;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 490px;
+  margin: 0 auto;
 }
 
 .advantages-intro h1 {
@@ -285,7 +287,7 @@ color: #81b3d2;
   padding-right: 20px;
   padding-left: 20px;
   padding-top: 25px;
-  padding-bottom: 45px;
+  padding-bottom: 50px;
   box-sizing: border-box;
 }
 
@@ -306,6 +308,8 @@ color: #81b3d2;
 }
 
 .booking-text {
+  width: 460px;
+  margin: 0 auto;
   margin-bottom: 45px;
 }
 
@@ -355,7 +359,7 @@ color: #81b3d2;
   color: #000000;
   font-weight: bold;
   font-size: 14px;
-  line-height: 26px;
+  line-height: 39px;
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
@@ -375,8 +379,13 @@ color: #81b3d2;
 }
 
 .input-popup-label {
-  width: 115px;
+  width: 100px;
   margin-right: 17px;
+  flex-shrink: 0;
+}
+
+.popup-item-count-child .input-popup-label {
+  width: 47px;
 }
 
 .input-popup {
@@ -404,12 +413,13 @@ color: #81b3d2;
   border: none;
   background-position: 50% 50%;
   background-color: #f2f2f2;
+  display: inline-block;
 }
 
 .popup-item-count {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 48px;
+  margin-bottom: 55px;
 }
 
 .minus {
@@ -441,11 +451,13 @@ color: #81b3d2;
 .popup-item-count-adult {
   display: flex;
   padding: 0;
+  align-items: center;
 }
 
 .popup-item-count-child {
   display: flex;
   padding: 0;
+  align-items: center;
 }
 
 .input-popup-adult {
@@ -456,6 +468,7 @@ color: #81b3d2;
   height: 38px;
   background-color: #f2f2f2;
   border: none;
+  text-align: center;
   box-sizing: border-box;
 }
 
@@ -596,6 +609,30 @@ color: #81b3d2;
   text-transform: uppercase;
   margin-bottom: 5px;
   margin-right: 40px;
+  margin-bottom: 13px;
+}
+
+.price-controls {
+  height: 36px;
+  margin-bottom: 20px;
+  vertical-align: top;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
+  font-size: 0;
+}
+
+.price-controls .input-price-label,
+.price-controls .input-price {
+  width: 90px;
+  padding-left: 65px;
+}
+
+.input-price-label {
+  font-size: 14px;
+  line-height: 21px;
+  color: #ffffff;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 .filter-checkbox {
@@ -608,6 +645,7 @@ margin-bottom: 25px;
   line-height: 21px;
   color: #ffffff;
   text-transform: uppercase;
+  display: inline-block;
   padding-left: 42px;
 }
 
@@ -648,7 +686,7 @@ margin-bottom: 25px;
   line-height: 21px;
   color: #ffffff;
   background: none;
-  border: 2px solid #ffffff;
+  border: none;
 }
 
 .filter-display {
@@ -659,6 +697,10 @@ margin-bottom: 25px;
   background: none;
   text-transform: uppercase;
   border: 2px solid #ffffff;
+  display: block;
+  margin: 0 auto;
+  padding: 6px 35px;
+  cursor: pointer;
 }
 
 .filter-display:hover {
