--- a/css/styles.css
+++ b/css/styles.css
@@ -181,11 +181,27 @@ color: #81b3d2;
 .advantages-text h3 {
   font-weight: bold;
   font-size: 21px;
+  padding-right: 61px;
+  padding-left: 61px;
 }
 
 .reason-number {
   font-size: 14px;
   padding-top: 15px;
+}
+.reason-three {
+  padding-right: 60px;
+  padding-left: 60px;
+}
+
+.reason-four {
+  padding-right: 60px;
+  padding-left: 60px;
+}
+
+.reason-five {
+  padding-right: 74px;
+  padding-left: 70px;
 }
 
 .advantages-text p {
@@ -201,11 +217,31 @@ color: #81b3d2;
   position: relative;
 }
 
+.option-home {
+  padding-right: 60px;
+  padding-left: 60px;
+  padding-top: 2px;
+}
+
+.option-food {
+  padding-right: 42px;
+  padding-left: 45px;
+  padding-top: 2px;
+}
+
+.option-present {
+  padding-right: 42px;
+  padding-left: 45px;
+  padding-top: 1px;
+}
+
+.present {
+  padding-left: 10px;
+}
+
 .features-item-home {
   padding-top: 139px;
   padding-bottom: 60px;
-  /* padding-right: 65px;
-  padding-left: 65px; */
 }
 
 .features-item-home::before {
@@ -219,10 +255,8 @@ color: #81b3d2;
 }
 
 .features-item-food {
-  padding-top: 138px;
+  padding-top: 140px;
   padding-bottom: 60px;
-  /* padding-right: 50px;
-  padding-left: 40px; */
 }
 
 .features-item-food::before {
@@ -238,8 +272,6 @@ color: #81b3d2;
 .features-item-present {
   padding-top: 140px;
   padding-bottom: 60px;
-  /* padding-right: 45px;
-  padding-left: 60px; */
 }
 
 .features-item-present::before {
@@ -284,27 +316,27 @@ color: #81b3d2;
   text-align: center;
   margin-bottom: 25px;
   width: 33.33334%;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-top: 25px;
-  padding-bottom: 50px;
   box-sizing: border-box;
+  padding-bottom: 50px;
+  padding-top: 26px;
 }
 
 .advantages-item-grey h3 {
   font-weight: bold;
   font-size: 21px;
+  padding-left: 130px;
+  padding-right: 128px;
 }
 
 .advantages-item-grey p {
   padding-top: 10px;
-
 }
 
   .booking {
   background-color: #ffffff;
   text-align: center;
   text-transform: uppercase;
+  height: 240px;
 }
 
 .booking-text {
@@ -326,6 +358,7 @@ color: #81b3d2;
 }
 
 .booking-search {
+  position: relative;
   width: 568px;
   font-size: 21px;
   line-height: 26px;
@@ -356,6 +389,7 @@ color: #81b3d2;
 }
 
 .popup {
+  position: absolute;
   color: #000000;
   font-weight: bold;
   font-size: 14px;
@@ -369,6 +403,7 @@ color: #81b3d2;
   width: 568px;
   padding: 55px;
   margin: 0 auto;
+  left: 465px;
 }
 
 .popup-item {
@@ -384,6 +419,10 @@ color: #81b3d2;
   flex-shrink: 0;
 }
 
+/* .popup-item-count-adult .input-popup-label {
+  width: 85px;
+} */
+
 .popup-item-count-child .input-popup-label {
   width: 47px;
 }
@@ -396,7 +435,7 @@ color: #81b3d2;
   margin-bottom: 55px;
   box-sizing: border-box;
   padding-top: 14px;
-  padding-left: 13px;
+  padding-left: 8px;
   padding-right: 10px;
   padding-bottom: 13px;
   background-color: #f2f2f2;
@@ -429,7 +468,7 @@ color: #81b3d2;
   background-color: #f2f2f2;
   border: none;
   box-sizing: border-box;
-  background-image: url(../img/-.svg);
+  background-image: url(../img/minus.svg);
   background-size: 12px auto;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -442,7 +481,7 @@ color: #81b3d2;
   background-color: #f2f2f2;
   border: none;
   box-sizing: border-box;
-  background-image: url(../img/+.svg);
+  background-image: url(../img/plus.svg);
   background-size: 12px auto;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -597,7 +636,7 @@ color: #81b3d2;
 
 .filter-field {
   border: none;
-  margin-left: 62px;
+  margin-left: 60px;
   margin-top: 27px;
   margin-right: 60px;
   padding: 0;
@@ -615,6 +654,7 @@ color: #81b3d2;
   color: #ffffff;
   text-transform: uppercase;
   margin-bottom: 13px;
+  margin-left: 6px;
 }
 
 .price-controls {
@@ -670,7 +710,8 @@ color: #81b3d2;
 }
 
 .filter-checkbox {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
+  margin-left: 9px;
 }
 
 .input-checkbox-label {
@@ -779,6 +820,11 @@ color: #81b3d2;
   margin-left: 72px;
 }
 
+.sorting-list {
+  display: flex;
+  width: 906px;
+}
+
 .sorting-filter {
   font-size: 12px;
   line-height: 18px;
@@ -803,7 +849,7 @@ color: #81b3d2;
 }
 
 .updown {
-  fill: orange;
+  display: flex;
 }
 
 .sorting-item:hover {
@@ -830,17 +876,22 @@ color: #81b3d2;
   border-bottom: none;
 }
 
-/* .sorting-up {
-  background-image: url("../img/icon-up.svg");
-} */
-
-/* .sorting-up:hover {
-  background-color: #ffffff;
+.sorting-up-icon {
+  fill: #cacaca;
+  margin-right: 10px;
 }
 
-.sorting-up:active {
-  background-color: #81b3d2;
-} */
+.sorting-down {
+  fill:
+}
+
+.sorting-up-icon:hover {
+  fill: #000000;
+}
+
+.sorting-up-icon:active {
+  fill: #81b3d2;
+}
 
 .hotels-list {
   list-style: none;
@@ -924,10 +975,6 @@ color: #81b3d2;
   color: #333333;
 }
 
-.info-link {
-
-}
-
 .hotel-detail {
   font-size: 14px;
   font-weight: bold;
@@ -976,30 +1023,36 @@ color: #81b3d2;
 }
 
 .stars-four {
-  display: flex;
-  justify-content: flex-end;
-  width: 110px;
+  background-image: url("../img/star.svg");
+  background-position: 100% 0%;
   height: 17px;
-  margin-top: 4px;
-  margin-left: 7px;
+  background-repeat: repeat-x;
+  background-repeat: space;
+  width: 89px;
+  margin-left: 22px;
+  margin-top: 5px;
 }
 
 .stars-three {
-  display: flex;
-  justify-content: flex-end;
-  width: 110px;
+  background-image: url("../img/star.svg");
+  background-position: 100% 0%;
   height: 17px;
-  margin-top: 4px;
-  margin-left: 7px;
+  background-repeat: repeat-x;
+  background-repeat: space;
+  width: 66px;
+  margin-left: 45px;
+  margin-top: 5px;
 }
 
 .stars-two {
-  display: flex;
-  justify-content: flex-end;
-  width: 110px;
+  background-image: url("../img/star.svg");
+  background-position: 100% 0%;
   height: 17px;
-  margin-top: 4px;
-  margin-left: 7px;
+  background-repeat: repeat-x;
+  background-repeat: space;
+  width: 42px;
+  margin-left: 69px;
+  margin-top: 5px;
 }
 
 .star-icon {
