--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,6 @@ body {
 }
 
 .navigation-item:nth-child(n+3) {
-  text-align: right;
   justify-content: flex-end;
 }
 
@@ -317,7 +316,7 @@ color: #81b3d2;
   margin-bottom: 25px;
   width: 33.33334%;
   box-sizing: border-box;
-  padding-bottom: 50px;
+  padding-bottom: 43px;
   padding-top: 26px;
 }
 
@@ -337,6 +336,7 @@ color: #81b3d2;
   text-align: center;
   text-transform: uppercase;
   height: 240px;
+  position: relative;
 }
 
 .booking-text {
@@ -358,7 +358,6 @@ color: #81b3d2;
 }
 
 .booking-search {
-  position: relative;
   width: 568px;
   font-size: 21px;
   line-height: 26px;
@@ -382,7 +381,7 @@ color: #81b3d2;
 
 .map {
   background-image: url(../img/map.png);
-  height: 473px;
+  height: 593px;
   background-repeat: no-repeat;
   background-position: 50% 0%;
   background-size: 100% auto;
@@ -402,8 +401,8 @@ color: #81b3d2;
   box-sizing: border-box;
   width: 568px;
   padding: 55px;
-  margin: 0 auto;
-  left: 465px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .popup-item {
@@ -417,11 +416,8 @@ color: #81b3d2;
   width: 100px;
   margin-right: 17px;
   flex-shrink: 0;
+  text-align: left;
 }
-
-/* .popup-item-count-adult .input-popup-label {
-  width: 85px;
-} */
 
 .popup-item-count-child .input-popup-label {
   width: 47px;
@@ -445,14 +441,23 @@ color: #81b3d2;
 }
 
 .calendar {
-  background-image: url(../img/calendar.svg);
-  background-repeat: no-repeat;
   height: 38px;
   width: 38px;
   border: none;
-  background-position: 50% 50%;
   background-color: #f2f2f2;
   display: inline-block;
+}
+
+.calendar-icon {
+  fill: rgba(0, 1, 1, 0.15);
+}
+
+.calendar-icon:hover {
+  fill: black;
+}
+
+.calendar-icon:active {
+  fill: #5496bd;
 }
 
 .popup-item-count {
@@ -467,11 +472,24 @@ color: #81b3d2;
   height: 38px;
   background-color: #f2f2f2;
   border: none;
-  box-sizing: border-box;
-  background-image: url(../img/minus.svg);
-  background-size: 12px auto;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
+}
+
+.minus-icon {
+  width: 12px;
+  fill: rgba(0, 1, 1, 0.15);
+}
+
+.minus-icon:hover {
+  fill: black;
+}
+
+.minus-icon:active {
+  fill: #5496bd;
+}
+
+.plus-icon {
+  width: 12px;
+  fill: rgba(0, 1, 1, 0.15);
 }
 
 .plus {
@@ -480,12 +498,16 @@ color: #81b3d2;
   height: 38px;
   background-color: #f2f2f2;
   border: none;
-  box-sizing: border-box;
-  background-image: url(../img/plus.svg);
-  background-size: 12px auto;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
 }
+
+.plus-icon:hover {
+  fill: black;
+}
+
+.plus-icon:active {
+  fill: #5496bd;
+}
+
 
 .popup-item-count-adult {
   display: flex;
@@ -552,7 +574,12 @@ color: #81b3d2;
   justify-content: space-around;
   opacity: 0.9;
   align-items: center;
-  height: 120px;
+  min-height: 120px;
+  margin: 0 auto;
+  width: 1200px;
+  transform: translateY(-120px);
+  background: rgba(255, 255, 255, 0.9);
+  position: absolute;
 }
 
 .tag {
@@ -562,7 +589,6 @@ color: #81b3d2;
   line-height: 26px;
   text-transform: uppercase;
   transform: translate(15px);
-
 }
 
 .social-list {
@@ -636,7 +662,7 @@ color: #81b3d2;
 
 .filter-field {
   border: none;
-  margin-left: 60px;
+  margin-left: 55px;
   margin-top: 27px;
   margin-right: 60px;
   padding: 0;
@@ -654,7 +680,7 @@ color: #81b3d2;
   color: #ffffff;
   text-transform: uppercase;
   margin-bottom: 13px;
-  margin-left: 6px;
+  margin-left: 16px;
 }
 
 .price-controls {
@@ -699,7 +725,7 @@ color: #81b3d2;
 
 .input-price-label {
   font-size: 14px;
-  line-height: 21px;
+  line-height: 32px;
   color: #ffffff;
   text-transform: uppercase;
   cursor: pointer;
@@ -714,6 +740,47 @@ color: #81b3d2;
   margin-left: 9px;
 }
 
+.input-checkbox:checked + .input-checkbox-label {
+  position: relative;
+  display: block;
+}
+.input-checkbox:checked + .input-checkbox-label::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  left: 9px;
+  top: -5px;
+  border-radius: 5px;
+}
+
+.input-checkbox:checked + .input-checkbox-label::after {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-image: url(../img/checked.svg);
+  top: 1px;
+  left: 16px;
+}
+
+.input-checkbox + .input-checkbox-label {
+  position: relative;
+  display: block;
+}
+
+.input-checkbox + .input-checkbox-label::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  left: 9px;
+  top: -5px;
+  border-radius: 5px;
+}
+
 .input-checkbox-label {
   font-size: 14px;
   line-height: 25px;
@@ -721,19 +788,6 @@ color: #81b3d2;
   text-transform: uppercase;
   display: inline-block;
   padding-left: 42px;
-}
-
-.filter-check-on {
-  background-image: url("../img/checkbox-on.svg");
-  background-repeat: no-repeat;
-  width: 27px;
-  height: 23px;
-  margin-right: 13px;
-}
-
-.filter-check-off {
-  background-image: url("../img/checkbox-off.svg");
-  background-repeat: no-repeat;
 }
 
 .filter-text {
@@ -745,10 +799,6 @@ color: #81b3d2;
   flex-direction: column;
   margin: 0;
   padding: 0;
-}
-
-.filter-field-price {
-
 }
 
 .button-range {
@@ -891,6 +941,10 @@ color: #81b3d2;
 
 .sorting-up-icon:active {
   fill: #81b3d2;
+}
+
+.hotels-option {
+  margin-bottom: 120px;
 }
 
 .hotels-list {
