--- a/css/styles.css
+++ b/css/styles.css
@@ -438,6 +438,20 @@ color: #81b3d2;
   border: none;
   height: 38px;
   width: 346px;
+  outline: none;
+}
+
+.input-popup:hover,
+.input-popup-adult:hover,
+.input-popup-child:hover {
+  background-color: #ebebeb;
+}
+
+.input-popup:focus,
+.input-popup-adult:focus,
+.input-popup-child:focus {
+  border: solid 2px #e5e5e5;
+  background-color: #ffffff;
 }
 
 .calendar {
@@ -446,17 +460,16 @@ color: #81b3d2;
   border: none;
   background-color: #f2f2f2;
   display: inline-block;
-}
-
-.calendar-icon {
   fill: rgba(0, 1, 1, 0.15);
+  outline: none;
 }
 
-.calendar-icon:hover {
+.calendar:hover {
   fill: black;
+  cursor: pointer;
 }
 
-.calendar-icon:active {
+.calendar:active {
   fill: #5496bd;
 }
 
@@ -472,24 +485,25 @@ color: #81b3d2;
   height: 38px;
   background-color: #f2f2f2;
   border: none;
+  fill: rgba(0, 1, 1, 0.15);
+  outline: none;
 }
 
 .minus-icon {
   width: 12px;
-  fill: rgba(0, 1, 1, 0.15);
 }
 
-.minus-icon:hover {
+.minus:hover {
   fill: black;
+  cursor: pointer;
 }
 
-.minus-icon:active {
+.minus:active {
   fill: #5496bd;
 }
 
 .plus-icon {
   width: 12px;
-  fill: rgba(0, 1, 1, 0.15);
 }
 
 .plus {
@@ -498,16 +512,18 @@ color: #81b3d2;
   height: 38px;
   background-color: #f2f2f2;
   border: none;
+  fill: rgba(0, 1, 1, 0.15);
+  outline: none;
 }
 
-.plus-icon:hover {
+.plus:hover {
   fill: black;
+  cursor: pointer;
 }
 
-.plus-icon:active {
+.plus:active {
   fill: #5496bd;
 }
-
 
 .popup-item-count-adult {
   display: flex;
@@ -531,6 +547,7 @@ color: #81b3d2;
   border: none;
   text-align: center;
   box-sizing: border-box;
+
 }
 
 .input-popup-child {
@@ -543,7 +560,9 @@ color: #81b3d2;
   border: none;
   text-align: center;
   box-sizing: border-box;
+  outline: none;
 }
+
 
 .popup-search {
   text-transform: uppercase;
@@ -662,7 +681,7 @@ color: #81b3d2;
 
 .filter-field {
   border: none;
-  margin-left: 55px;
+  margin-left: 50px;
   margin-top: 27px;
   margin-right: 60px;
   padding: 0;
@@ -747,22 +766,12 @@ color: #81b3d2;
 .input-checkbox:checked + .input-checkbox-label::before {
   content: "";
   position: absolute;
-  width: 20px;
-  height: 20px;
-  border: 2px solid #ffffff;
-  left: 9px;
-  top: -5px;
-  border-radius: 5px;
-}
-
-.input-checkbox:checked + .input-checkbox-label::after {
-  content: "";
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  background-image: url(../img/checked.svg);
-  top: 1px;
-  left: 16px;
+  top: -3px;
+  left: 10px;
+  width: 27px;
+  height: 23px;
+  background: url("../img/checkbox-on.svg") no-repeat top left;
+  background-size: 27px 23px;
 }
 
 .input-checkbox + .input-checkbox-label {
@@ -773,21 +782,21 @@ color: #81b3d2;
 .input-checkbox + .input-checkbox-label::before {
   content: "";
   position: absolute;
-  width: 20px;
-  height: 20px;
-  border: 2px solid #ffffff;
-  left: 9px;
-  top: -5px;
-  border-radius: 5px;
+  top: -3px;
+  left: 10px;
+  width: 23px;
+  height: 23px;
+  background: url("../img/checkbox-off.svg") no-repeat top left;
+  background-size: 23px 23px;
 }
 
 .input-checkbox-label {
   font-size: 14px;
-  line-height: 25px;
+  line-height: 23px;
   color: #ffffff;
   text-transform: uppercase;
   display: inline-block;
-  padding-left: 42px;
+  padding-left: 50px;
 }
 
 .filter-text {
