--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,7 @@ color: #81b3d2;
   background-repeat: no-repeat;
   background-position: 50% 0%;
   background-size: 100% auto;
+  margin-bottom: -120px;
 }
 
 .popup {
@@ -597,9 +598,11 @@ color: #81b3d2;
   min-height: 120px;
   margin: 0 auto;
   width: 1200px;
-  transform: translateY(-120px);
-  background: rgba(255, 255, 255, 0.9);
-  position: absolute;
+  background: rgba(255, 255, 255, 0.902);
+}
+
+.inner-footer {
+  background-color: #ffffff;
 }
 
 .tag {
@@ -669,6 +672,10 @@ color: #81b3d2;
   fill: #bdbbbc;
 }
 
+.filter {
+  padding-left: 72px;
+  padding-right: 72px;
+}
 
 .filter-form {
   display: flex;
@@ -682,15 +689,16 @@ color: #81b3d2;
 
 .filter-field {
   border: none;
-  margin-left: 50px;
   margin-top: 27px;
-  margin-right: 60px;
   padding: 0;
+  margin-right: 115px;
 }
 
 .filter-field-range {
-  width: 330px;
+  width: 314px;
+  margin: 0;
   margin-left: auto;
+  margin-top: 27px;
 }
 
 .filter-list {
@@ -700,12 +708,11 @@ color: #81b3d2;
   color: #ffffff;
   text-transform: uppercase;
   margin-bottom: 13px;
-  margin-left: 16px;
 }
 
 .price-controls {
-  height: 36px;
-  margin-bottom: 20px;
+  height: 32px;
+  margin-bottom: 18px;
   vertical-align: top;
   border: 2px solid #ffffff;
   border-radius: 2px;
@@ -732,14 +739,12 @@ color: #81b3d2;
 
 .range-controls .scale {
   height: 2px;
-
   background: rgba(255, 255, 255, 0.3);
 }
 
 .range-controls .bar {
   width: 80%;
   height: 2px;
-
   background: #ffffff;
 }
 
@@ -764,11 +769,12 @@ color: #81b3d2;
   position: relative;
   display: block;
 }
+
 .input-checkbox:checked + .input-checkbox-label::before {
   content: "";
   position: absolute;
   top: -3px;
-  left: 10px;
+  left: -9px;
   width: 27px;
   height: 23px;
   background: url("../img/checkbox-on.svg") no-repeat top left;
@@ -783,8 +789,8 @@ color: #81b3d2;
 .input-checkbox + .input-checkbox-label::before {
   content: "";
   position: absolute;
-  top: -3px;
-  left: 10px;
+  top: 1px;
+  left: -9px;
   width: 23px;
   height: 23px;
   background: url("../img/checkbox-off.svg") no-repeat top left;
@@ -797,7 +803,7 @@ color: #81b3d2;
   color: #ffffff;
   text-transform: uppercase;
   display: inline-block;
-  padding-left: 50px;
+  padding-left: 29px;
 }
 
 .filter-text {
@@ -820,15 +826,15 @@ color: #81b3d2;
   border: none;
   border-radius: 50%;
   position: absolute;
-  top: -9px;
+  top: -10px;
 }
 
 .button-range-min {
-  left: 0;
+  left: -3px;
 }
 
 .button-range-max {
-  left: 80%;
+  left: 79%;
 }
 
 .button-range:hover {
@@ -855,6 +861,7 @@ color: #81b3d2;
   border: 2px solid #ffffff;
   display: block;
   margin: 0 auto;
+  margin-top: 8px;
   padding: 6px 35px;
   cursor: pointer;
 }
@@ -947,10 +954,6 @@ color: #81b3d2;
 
 .sorting-up-icon:active {
   fill: #81b3d2;
-}
-
-.hotels-option {
-  margin-bottom: 120px;
 }
 
 .hotels-list {
@@ -1066,6 +1069,7 @@ color: #81b3d2;
 }
 
 .hotel-booking {
+  display: inline-block;
   font-size: 14px;
   font-weight: bold;
   line-height: 21px;
@@ -1073,9 +1077,9 @@ color: #81b3d2;
   background-color: #766357;
   text-decoration: none;
   padding-top: 3px;
-  padding-bottom: 6px;
-  padding-right: 16px;
-  padding-left: 16px;
+  padding-bottom: 3px;
+  padding-right: 17px;
+  padding-left: 17px;
 }
 
 .hotel-booking:hover {
